<?xml version="1.0" encoding="utf-8"?>
<com.flipboard.bottomsheet.BottomSheetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/bottom_sheet">

    <LinearLayout android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/toolbar"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/app_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp">

                <TextView
                    android:id="@+id/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/app_name"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:id="@+id/app_describe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_describe"
                    android:textSize="18sp"
                    android:layout_below="@+id/app_name"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/app_detail"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/app_version_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_version_text"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/app_version_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_version_number"
                    android:layout_marginLeft="5dp"
                    android:textSize="14sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_above="@+id/license">

                <Button
                    android:id="@+id/project_page_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/project_link"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:background="@drawable/about_btn" />

                <Button
                    android:id="@+id/contact_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_me"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:background="@drawable/about_btn"
                    android:layout_marginTop="10dp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/license"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bottom_text"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="20dp"/>

        </RelativeLayout>

    </LinearLayout>

</com.flipboard.bottomsheet.BottomSheetLayout>